--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --cor-de-fundo: #0c0c0c;
-    --verde: #71a6d8;
+    --azul: #63a6e6;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
@@ -33,7 +33,7 @@ body {
 }
 
 .titulo-principal span {
-    color: var(--verde);
+    color: var(--azul);
 }
 
 .botao {
@@ -62,7 +62,7 @@ body {
 
 .ativo {
     background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--verde);
+    border-bottom: 4px solid var(--azul);
 }
 
 .abas-textos{
@@ -84,7 +84,7 @@ body {
 }
 .aba-conteudo-titulo-secundario{
     text-align: center;
-    color: var(--verde);
+    color: var(--azul);
     text-transform: uppercase;
 }
 
