--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body {
     background-color: var(--cor-de-fundo);
     color: var(--branco);
-    font-family: 'Chakra Petch', sans-serif;
+    font-family: 'Aldrich', sans-serif;
 }
 
 
@@ -37,7 +37,7 @@ body {
 }
 
 .botao {
-    font-family: "Crakra Petch", sans-serif;
+    font-family: "Aldrich", sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
