mudei o fundo dos botoes

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --cor-de-fundo: #0c0c0c;
     --azul: #63a6e6;
     --branco: #FFFFFF;
-    --botao-ativo: #b1d132;
+    --botao-ativo: #1f5b66;
     --botao-inativo: rgba(55, 82, 94, 0.5);
     --texto-fundo: rgba(48, 65, 85, 0.3);
 }
